--- a/registerlogin.html
+++ b/registerlogin.html
@@ -19,7 +19,7 @@
     <div id="containerrlMain">
 
         <div id="containerrl2">
-            <img src="./tigerhead.png" id="logo" class="image" alt="logo">
+            <img src="./tigerhead.png" id="logo" class="image" alt="logo" style="display: none;">
         </div>
 
 
